--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
+  <link type="text/css" rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
